# Oceanus-

./: Blog.md  Dockerfile  README.md  client.py  gap_check.py  main.py  models.py  openenv.yaml  out.txt  pyproject.toml  requirements.txt  run.py  workflow.md
dashboard/: index.html  server.py
data/: baseline_episode.json  trained_episode.json
notebooks/: oceanus_colab_training.ipynb  oceanus_final_submission_(1)_(1).ipynb
oceanus/: __init__.py  adversary.py  demo_recorder.py  models.py  physics.py  runner.py
server/: __init__.py  app.py  oceanus_environment.py
tests/: test_environment.py
train/: evaluate.py  train_grpo.py
